# Daily-Brief-Intel-BI

./: .gitignore  README.md  pyproject.toml
config/: alerts.yml  geo.yml  schedule.yml  scoring.yml  series.yml  settings.yml  sources.yml  watchlist.yml
docs/: INDEX.md  architecture.md  pr_build_plan.md  runbook.md  v1.4_design_freeze.md  v1.4_traceability_matrix.md
docs/adr/: ADR-001-config-driven-product.md  ADR-002-local-first-duckdb-audit.md  ADR-003-run-id-lineage-provenance.md  ADR-004-ui-fastapi-jinja-htmx.md  ADR-005-operations-first.md
output/db/: app.duckdb
src/app/: db.py  main.py  pipeline.py
src/app/auth/: deps.py  session.py
src/app/config/: __init__.py
src/app/ingest/: estat.py  fetch.py  normalize.py  rss.py
src/app/templates/: base.html  daily.html  login.html
src/app/web/: routes.py
src/core/: config_loader.py  config_schema.py  logging.py  series_resolver.py
src/pipeline/: run_lock.py  run_manager.py
src/storage/: db.py  indicator_series.py  migrate.py  queries.py  schema.sql  series_cache.py
src/tool/: __main__.py
tests/: test_config_validation.py  test_db_init.py  test_indicator_series_ingest.py  test_ingest_parsers.py  test_pipeline_ingest.py  test_pr1_smoke.py  test_queries_items.py  test_queries_source_health.py  test_run_id_policy.py  test_series_resolver.py  test_web_auth.py
tests/fixtures/: estat_sample.json  rss_sample.xml
tool/: __main__.py
